base, activity, stretch-to-bottom toggle invoice, css fix show log

--- a/modules/invoice/public/css/default.less
+++ b/modules/invoice/public/css/default.less
@@ -30,6 +30,15 @@
 		}
 		
 	}
-	
-	
 }
+
+
+
+.module-invoice {
+	&.invoice-invoice-controller
+	, &.invoice-offer-controller {
+		#activity-table-container { min-height: 300px; }
+	}
+}
+
+
